Fixing alignment

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2137,7 +2137,7 @@ input, select, textarea {
 		}
 
 		.image.top, .image.bottom {
-			max-width: 25%;
+			max-width: 30%;
 		}
 
 		.image.left img, .image.right img {
